small changes :- nerwork check added swiperefreshlayout added toasts

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".DataList.views.DataListActivity"
     android:background="#d6d2d2">
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/swipeRefreshLay">
 
 <android.support.v7.widget.RecyclerView
     android:layout_width="match_parent"
@@ -22,4 +26,5 @@
         android:visibility="gone"
         />
 
+    </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
