Stored name in the preferences added marging right and left to swipeRefreshLayout added preferences method to set and get name

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,14 +9,15 @@
     <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/swipeRefreshLay">
+        android:id="@+id/swipeRefreshLay"
+        android:layout_marginRight="8dp"
+        android:layout_marginLeft="8dp">
 
 <android.support.v7.widget.RecyclerView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/dataList"
-    android:layout_marginRight="8dp"
-    android:layout_marginLeft="8dp"/>
+    />
 
     <ProgressBar
         android:layout_width="match_parent"
